# flashy-cards

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  keyboard.md  layout.md  notebook.md
src/: CMakeLists.txt
src/app/: main.cpp
src/flib/db/: db.cpp  db.hpp
